# podcast-transcript-workflow

./: .gitignore  READABLE_FORMAT.md  README.md  config.example.env  glossary.json  pyproject.toml  requirements-funasr.txt  setup.py
.github/workflows/: ci.yml
assets/tool-pantry/: orange-cat-monitor.icns  peach-podcast-workbench.icns
docs/superpowers/specs/: 2026-07-13-podcast-workbench-icon-design.md  2026-07-14-podcast-dashboard-redesign-design.md
examples/: episodes.example.json  subscriptions.example.json
podcast_tracker/: __init__.py  asr.py  asr_funasr.py  asr_whisper.py  audio_utils.py  checker.py  cli.py  clustering_patch.py  config.py  document_patches.py  feed.py  glossary.py  jobs.py  lark_export.py  models.py  private_runtime.py  publishing.py  readable.py  scheduled.py  store.py  transcript.py  web.py  xiaoyuzhou.py
scripts/: apply_glossary.py  benchmark_asr.py  healthcheck_web.sh  install_launchd_web.sh  run_check.sh  run_web.sh  setup_funasr.sh  uninstall_launchd_web.sh  verify_readable.py
skills/podcast-readable/: SKILL.md
tests/: test_apply_glossary.py  test_asr.py  test_checker.py  test_document_patches.py  test_funasr.py  test_jobs.py  test_lark_export.py  test_patch_baseline.py  test_publishing.py  test_scheduled.py  test_static_index.py  test_store.py  test_transcript.py  test_verify_readable.py  test_web.py  test_xiaoyuzhou.py
web_static/: index.html
